<resources>
    <string name="app_name">Lingvo Lern</string>
    <string name="Lingvo_Lern">Lingvo Lern</string>
    <string name="txtNumberLearnedWords">0</string>
    <string name="textTreningWord">Hello</string>
    <string name="number_progress">0</string>
    <string name="txtTranscript">[Transcript]</string>
    <string name="EnterYourName">Введите ваше имя:</string>
    <string name="authorization">Авторизация</string>
    <string name="userName">Пользователь:</string>
    <string name="levels">Уровни:</string>
    <string name="transcriptText">
Первое, что вам нужно знать — на письме транскрипция обозначается квадратными скобками [] как в примерах выше. Второе: одно и то же слово может иметь разную транскрипцию в зависимости от варианта произношения (британский или американский).\n

Ударения в английской транскрипции бывают двух видов: основное и второстепенное.\n

‘ — это основное ударение (main stress). Оно ставится перед ударной гласной в каком бы месте слова она ни находилась.\n

, — это второстепенное ударение (secondary stress). Оно ставится перед гласной в длинных словах, где это необходимо.\n

Еще есть один важный знак, который будет обозначать долготу гласного звука. Он может располагаться как в середине, так и в конце слова:\n

: — долгота гласной\n

Знаки в транскрипции могут повторять сами английские буквы, а могут и быть теми самыми «закорючками», которые так пугают новичков. Ниже мы приведем примеры звуков и фонетических знаков с примерным описанием того, как они будут звучать, чтобы вам было понятнее, как читать транскрипцию на английском языке.\n

Эти согласные звуки похожи на русские и даются нам более-менее легко:\n\n

[f] — ф (энергично, слегка прикусить нижнюю губу) — forest\n
[v] — в (слегка прикусить нижнюю губу) — vocal\n
[s] — с (приглушенный звук, прижать не кончик языка, а чуть большую его часть) — sofa\n
[z] — з (аналогично, прижать язык не кончиком, а «спинкой») — zone\n
[h] — х (произносить на легком выдохе) — hall\n
[p] — п (резкий выдох с придыханием) — pen\n
[b] — б (резкий выдох с придыханием) — ball\n
[d] — д (кончик языка поставить чуть за передние зубы, на бугорки десны) — drink\n
[k] — к (резкий выдох с придыханием) — kite\n
[g] — г (как в русском, но не такой энергичный) — green\n
[m] — м (как в русском) — mother\n
[n] — н (как в русском) — note\n
[l] — л (как в русском, но чуть мягче) — let\n
[r] — р (более мягкий звук, кончик языка на бугорках десен) — rose\n
[t] — т (более мягкий, кончик языка не к зубам, а на бугорки десны над ними) — tree\n
[w] — в (губы сложить трубочкой и резко разжать) — what\n\n
Звуки согласных, напоминающие сочетания русских букв:\n\n

[ʃ] — ш (что-то среднее между ш и щ, но не свистящий) — ship  \n
[ʒ] — ж (мягкая, почти жь, но не свистящая) — pleasure\n
[tʃ] — тч (мягкое сочетание, произносится слитно) — catch\n
[dʒ] — дж (мягкая, почти джь, произносится как единый звук) — jump\n
[j] — йи (что-то среднее между этими буквами) — yet\n\n
Согласные звуки, которых нет в русском языке:\n\n

[θ] — с (как бы «подуйте» на кончик языка между зубов) — thin\n
[ð] — з (снова подуйте на кончик языка между зубов, произнося русскую букву «з»)\n
[ŋ] — н (произносится «в нос») — long\n\n
Гласные звуки, похожие на русские:\n\n

[ʌ] — а (короткий и звучный) — sun\n
[ɑː] — а (глубокий и долгий звук, будто показываете горло врачу) — car\n
[i] — и (короткий звук, что-то среднее между «и» и «ы») — fit\n
[i:] — и (долгий звук и) — sea\n
[u] — у (произносится чуть расслабленее) — cook\n
[u:] — у (длинное легкое «у») — true\n
[e] — е (мягкий звук, что-то среднее между «e» и «э») — get\n
[ə] — э (слабая, что-то среднее между «э» и «а») — sister\n
[ɔː] — о (долгий звук, будто вы чем-то удивлены) — more\n
[ɒ] — о (что-то среднее между «о» и «а») — hot\n\n
Гласные звуки, которых нет в русском:\n\n

[ɜː] — ёо (будто вы приготовились сказать «ё», но говорите «о») — her\n
[æ] — аэ (произнести, расслабив нижнюю челюсть и чуть растянув губы) — cat\n\n
Дифтонги:\n\n

[aɪ] — аи (с ударением на «а» и в конце именно «и», а не «й») — like\n
[au] — ау (коротко, с ударением на «а») — cow\n
[ɪə] — иэ (с ударением на «и») — hear\n
[eɪ] — эи (произносится коротко, с ударением на «э») — take\n
[eə] — эа (с ударением на «э») — hair\n
[əu] — оу (коротко, с ударением на «о», а «у» практически не звучит) — go  \n
[uə] — уэ (мягко, с ударением на «у») — cure\n
[ɔɪ] — ои (произносится коротко, с ударением на «о») — boy\n\n
И наконец, встречаются тройные сочетания звуков:\n\n

[aɪə] — аиэ (с ударением на «а», быстро и слитно) — fire\n
[auə] — ауэ (с с ударением на «а», быстро и слитно) — our\n\n
Каверзная транскрипция и сложные слова\n
Всегда проверяйте транскрипцию слов, которые вам непонятны. Например, казалось бы, что сложного может быть в произнесении такого простого предлога of? Но на конце произносится не «ф», а «в», а его транскрипция выглядит как [ɔv].\n

А вот слово halt (останавливать) в британской версии транскрипции будет [hɒlt], а в американской — [hɑːlt]. В обоих случаях произносится «о», но никак не «а» на немецкий манер.\n

Часто согласные и вовсе опускаются при произношении. Например, в слове doubt (сомнение) буква «б» не произносится, а транскрипция в обоих вариантах выглядит следующим образом: [daʊt]. Аналогично и в слове comb (расческа), на конце не будет никакой «б», хотя соблазн ее произнести очень велик. Транскрипция у него следующая: [kəʊm].\n

Что касается долгих гласных, то они не всегда произносятся так, как вам кажется, независимо от того, что гласная в слове двойная. Хорошие примеры таких слов с подвохом — это good [ɡʊd] (хорошо), book [bʊk] (книга) и look [lʊk] (смотреть).\n

Всегда обращайте внимание на то, где в транскрипции стоит ударение. Приведем интересный пример: слово valet (камердинер, слуга). На русский манер мы хотим произнести его с ударением на «е», но делать этого определенно не стоит, потому что согласно его английской транскрипции [ˈvæleɪ], ударение ставится на первую гласную «а».\n

А где вы поставите ударение в слове applicable (подходящий)? Правильный ответ — на второй слог (гласный «и»), потому что его транскрипция выглядит как [əˈplɪkəbəl].\n

Кстати, даже у самих носителей языка бывают проблемы с произношением. Так, согласно исследованию, британцам тяжелее всего даются слова, в которых рядом стоят буквы m и n, t и s и сочетание th.\n

Одна из самых популярных британских газет The Daily Telegraph опросила людей Великобритании и выявила 20 самых трудных для произношения слов на английском языке. Интересно, что одно из этих слов — и есть само «произношение» или pronunciation, которое даже и пишется нелегко. Приводим примеры всех двадцати ниже с транскрипцией:\n\n

Phenomenon [fəˈnɒmɪnən] — явление\n
Anaesthetist [əˈniːsθətɪst] — анестезиолог\n
Remuneration [rɪˌmjuːnərˈeɪʃən] — вознаграждение\n
Statistics [stəˈtɪstɪks] — статистика\n
Ethnicity [eθˈnɪsɪt̬i] — этническая принадлежность  \n
Philosophical [ˌfɪləˈsɒfɪkəl] — философский\n
Provocatively [prəˈvɒkətɪvlɪ] — вызывающе\n
Anonymous [əˈnɒnɪməs] — анонимный\n
Thesaurus [θɪˈsɔːrəs] — тезаурус\n
Aluminium [ˌæljəˈmɪniəm] — алюминий\n
Regularly [ˈreɡjələli] — регулярно\n
February [ˈfebruəri] — февраль\n
Particularly [pəˈtɪkjələli] — в особенности\n
Hereditary [hɪˈredɪtəri] — наследственный\n
Prioritising [praɪˈɒrɪtaɪzɪŋ] — определение приоритетов\n
Pronunciation [prəˌnʌnsiˈeɪʃən] — произношение  \n
Prejudice [ˈpredʒədɪs] — предубеждение\n
Facilitate [fəˈsɪlɪteɪt] — облегчать\n
Hospitable [hɒsˈpɪtəbəl] — гостеприимный\n
Onomatopoeia [ˌɒnəˌmætəˈpiːə] — ономатопея, звукоподражание\n
Типичные ошибки в произношении\n\n
Если уж сами британцы имеют сложности с выговариванием звуков, то что говорить о всех тех, кто только начинают учить английский? Да и что скрывать, даже те, кто изучает и практикует язык в течение многих лет могут неправильно произносить звуки или же иметь проблемы с какими-то определенными сочетаниями букв. Это вполне нормально, и главное тут — регулярная практика и тренировки.\n

Интересно, что жители разных стран имеют разные проблемы с английскими звуками. Именно так формируется «типичный акцент», по которому иностранцы могут с легкостью определить, откуда вы прибыли. Даже если вы не хотите сообщать им этого — они поймут из какой страны вы родом. Давайте посмотрим, какие типичные ошибки встречаются в речи россиян, чтобы мы не только знали как читать транскрипцию на английском языке, но и смогли сделать это like a native.\n\n

Итак, русские чаще всего:\n

Приглушают звонкие согласные в конце слова\n
При неправильном произношении слово bed (кровать) может легко превратиться в bat (летучую мышь). Поэтому проговаривайте звуки до конца и не съедайте окончания.\n\n

Произносят короткие и долгие гласные одинаково\n
Если не обращать внимание на то, как долго произносится гласный звук, то можно легко получить из овцы (sheep) корабль (ship).\n\n

Произносят [w] и [v] как русский звук «в»\n
Основная проблема в том, что в нашем языке только один такой звук, а в английском у него несколько вариантов произношения.\n\n

Произносят [r] как русскую «р»\n
Этот английский звук не такой звонкий и резкий, как у нас. Потренируйтесь, чтобы не «каркать», произнося слово car (автомобиль).\n\n

Произносят [ŋ] как русскую «н»\n
Научиться говорить этот звук «в нос» бывает довольно непросто, но как только вы поймете как правильно это делать, то быстро привыкните и перестроите свой речевой аппарат.\n\n

Произносят [h] как русскую «х»\n
По сути, этот звук — легкий выдох, которого почти не должно быть слышно, а мы произносим его по привычке четко и ясно.\n\n

Произносят [p] как русскую «п»\n
В английском языке этот звук более четкий и резкий. Произносите так, будто задуваете свечу на торте. Аналогичная ситуация и со звуком [t].\n\n</string>
    <string name="pronounText">
        Местоимение – это часть речи, обозначающая, но не называющая прямо предметы, лица, их свойства и отношения или дающая их временную и пространственную характеристику.\n\n

По своему значению местоимения в английском языке делятся на несколько групп. Ниже приведен список этих групп и соответствующих им английских местоимений.\n\n

Личные\n\n
I – я\n
you – ты, вы\n
he – он\n
she – она\n
it – оно\n
we – мы\n
they – они\n
me – я, мне\n
him – он\n
her – она\n
us – мы\n
them – они\n\n
Притяжательные\n\n
my – мой, моя\n
your – твой, ваш\n
his – его\n
her – ее\n
its – его, ее, свой\n
our – наш\n
their – их\n
mine – мой\n
yours – твой\n
hers – ее\n
ours – наш\n
theirs – их\n\n
Указательные\n\n
this – этот, эта, это\n
that – тот, та, то\n
these – эти\n
those – те\n
such – тот, такой\n\n
Возвратные\n\n
myself – себя, себе\n
yourself – себя\n
himself – себя, сам\n
herself – себя, сама\n
itself – себя, сам, сама, само\n
ourselves – себе, себя, собой\n
yourselves – себя\n
themselves – себя, себе, сами\n\n
Взаимные\n\n
each other – друг друга\n
one another – один другого\n\n
Вопросительные\n\n
who – который, кто\n
what – что, какой\n
which – который, кто, какой\n
whose – чей, чьё\n
whoever – кто бы ни, который бы ни\n
whatever – что бы ни, (хоть) что-нибудь\n
whichever – какой угодно, какой бы ни\n\n
Относительные\n\n
who – который, кто\n
whose – чей, чьё\n
which – который, кто\n
that – тот, та, то\n\n
Неопределенные\n\n
some – кое-кто, некоторые\n
something – кое-что, нечто, что-нибудь\n
somebody – кто-нибудь, кто-то\n
someone – кто-нибудь, кто-то\n
any – какой-нибудь, что-нибудь\n
anything – что-нибудь, всё, что угодно\n
anybody – кто-нибудь, всякий, любой\n
anyone – кто-нибудь, любой\n\n
Отрицательные\n\n
no – никакой\n
nothing – ничего, ничто\n
nobody – никто\n
no one – никто\n
none – ни один из\n
neither – ни тот ни другой, ни один, никто\n\n
Разделительные\n\n
other – другой, иной\n
another – ещё один, другой\n\n
Универсальные\n\n
all – все, каждый\n
each – каждый, всякий\n
both – оба, обе\n
either – каждый, любой (из двух)\n
every – каждый, всякий\n
everything – всё\n
everybody – каждый\n
everyone – каждый, всякий человек\n</string>
</resources>