<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txtLingvoLern"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="60dp"
            android:gravity="top"
            android:text="@string/Lingvo_Lern"
            android:textColor="@color/colorDarkBlue"
            android:textSize="45sp" />

        <Button
            android:id="@+id/btnStart"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLingvoLern"
            android:layout_marginTop="44dp"
            android:text="Начать" />

        <Button
            android:id="@+id/btnVocabulary"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBasics"
            android:text="Мой словарь" />

        <Button
            android:id="@+id/btnTranscript"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnVocabulary"
            android:text="Транскрипт" />

        <Button
            android:id="@+id/btnBasics"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnStart"
            android:text="Основы" />

        <ImageButton
            android:id="@+id/imageButton_Help"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/question_icon" />


        <ImageButton
            android:id="@+id/imageButton_setting"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/setting" />

        <Spinner
            android:id="@+id/spiner_settings"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:focusedByDefault="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="">

        </Spinner>


        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comic"
            android:text="@string/userName"
            android:textColor="@color/colorBlueBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_userName"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/txtName"
            android:text=""
            android:textSize="22sp" />


        <TextView
            android:id="@+id/txt_learned_words"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="Выученных слов: "
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtNumberLearnedWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtName"
            android:layout_marginLeft="-3dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@id/txt_learned_words"
            android:fontFamily="@font/comic"
            android:text="@string/txtNumberLearnedWords"
            android:textColor="@color/colorBlueBlack"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
